--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,90 @@
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/ptsans-400.woff2") format("woff2");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/ptsans-700.woff2") format("woff2");
+  font-display: swap;
+}
+
+body{
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  color: #333333;
+  background-color: #fff;
+}
+
 .hero {
   color: #000000;
-  background-color: #fff;
+  background-color: rgba(131, 179, 211, 0.2);
   background-image: url("../images/background/hero_banner_1200x485.jpg");
-  background-size: 100% auto;
-  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
 .subscribe {
   color: #fff;
   background-color: #E6F0F6;
   background-image: url("../images/background/subscribe_bg_1200x415.jpg");
-  background-size: 100% auto;
-  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 
 .inner-header {
   color: #fff;
   background-color: #E6F0F6;
   background-image: url("../images/background/catalog_banner_1200x412.jpg");
-  background-size: 100% auto;
+  background-size: cover;
+  background-position: center center;
+}
+
+.conditions__item:before {
+  background-position: 50%;
   background-repeat: no-repeat;
+  background-size: contain;
+  content: "";
+  display: inline-block;
+  width: 75px;
+  height: 72px;
+}
+
+.conditions__item:nth-child(1):before {
+  background-image: url("../images/icons/icon_house.svg");
+}
+
+.conditions__item:nth-child(2):before {
+  background-image: url("../images/icons/icon_food.svg");
+}
+
+.conditions__item:nth-child(3):before {
+  background-image: url("../images/icons/icon_souvenir.svg");
+}
+
+.conditions__item:nth-child(odd){
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.catalog-products{
+  background-color: #E6F0F6;
+}
+
+.advantages__item:nth-child(odd){
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.advantages__item:nth-child(even){
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.advantages__item:last-child, .advantages__item:first-child {
+  background-color: #82B3D3;
+  color: #fff;
 }
