--- a/styles/styles.css
+++ b/styles/styles.css
@@ -300,21 +300,6 @@ body{
   background-color: #fff;
 }
 
-.hero {
-  color: #000000;
-  background-color: rgba(131, 179, 211, 0.2);
-  background-image: url("../images/background/hero_banner_1200x485.jpg");
-  background-size: cover;
-  background-position: center center;
-}
-
-.subscribe {
-  background-color: #E6F0F6;
-  background-image: url("../images/background/subscribe_bg_1200x415.jpg");
-  background-size: cover;
-  background-position: center center;
-}
-
 .subscribe__button{
   font-size: 20px;
   line-height: 36px;
@@ -349,6 +334,22 @@ body{
   line-height: 40px;
   text-decoration: none;
   color: inherit;
+}
+
+.hero {
+  color: #000000;
+  background-color: rgba(131, 179, 211, 0.2);
+  background-image: url("../images/background/hero_banner_1200x485.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+
+.subscribe {
+  background-color: #E6F0F6;
+  background-image: url("../images/background/subscribe_bg_1200x415.jpg");
+  background-size: cover;
+  background-position: center center;
+  color: #fff;
 }
 
 .inner-header {
@@ -399,4 +400,16 @@ body{
 
 .advantages__item:last-child, .advantages__item:first-child {
   background-color: #82B3D3;
+  color: #fff;
+}
+
+.breadcrumbs__item:not(:last-child):after{
+  content: '';
+  background-image: url("../images/icons/icon_arrow.svg");
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 8px;
+  height: 11px;
+  padding-bottom: 2px;
 }
