--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,7 +255,7 @@ body{
 }
 
 .product-card__button{
-  padding: 8px 12px;
+  padding: 8px 8px;
   text-align: center;
   border-radius: 4px;
   font-weight: 700;
@@ -267,6 +267,7 @@ body{
   color: #fff;
   width: 140px;
   display: inline-block;
+  text-transform: uppercase;
 }
 
 .product-card__button--primary{
