--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,16 +14,63 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   color: #000;
+  background-color: #F2F2F2;
+  margin: 0;
+}
+
+.wrapper {
+  margin: 0 auto;
+  min-width: 375px;
+  max-width: 1200px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .visually-hidden {
   display: none;
+}
+
+.page-header {
+  padding: 0 70px;
+}
+
+.navigation {
+  display: flex;
+}
+
+.navigation__list, .advantages__list, .conditions__list, .footer__social-list, .breadcrumbs, .catalog-filter__list, .product-list, .pagination {
+  list-style-type: none;
+  padding-inline-start: 0;
+}
+
+.navigation__list {
+  margin: 0;
+  margin-right: 285px;
+}
+
+.navigation__list:last-child{
+  margin-right: 0;
+}
+
+.navigation__logo-link {
+  width: 140px;
+  margin-right: 28px;
 }
 
 .navigation__link {
@@ -74,7 +121,8 @@ body {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  display: inline-block;
+  display: block;
+  width: 100%;
 }
 
 .catalog-filter__submit-button {
@@ -111,6 +159,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
+  text-transform: uppercase;
 }
 
 .intro__subtitle, .search-hotels__description {
@@ -124,6 +173,7 @@ body {
   line-height: 36px;
   font-weight: 700;
   color: #fff;
+  text-transform: uppercase;
 }
 
 .subscribe__text {
@@ -158,6 +208,10 @@ body {
   color: #333;
 }
 
+.advantages__item--light {
+  background-color: #82B3D3!important;
+}
+
 .advantages__item--light .advantages__title, .advantages__item--light .advantages__text {
   color: #fff;
 }
@@ -166,6 +220,7 @@ body {
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
+  display: block;
 }
 
 .popup-form input {
@@ -186,17 +241,31 @@ body {
   color: #333333;
 }
 
+.tooltip-img {
+  cursor: pointer;
+}
+
 .tooltip-hidden-text {
   font-size: 16px;
   line-height: 20px;
   color: #fff;
   background-color: #333333;
+  display: none;
+}
+
+.inner-header {
+  padding:35px 70px 70px 70px;
 }
 
 .inner-header__title {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
+}
+
+.breadcrumbs {
+  display: flex;
+  margin: 0;
 }
 
 .breadcrumbs__link {
@@ -345,10 +414,26 @@ body {
 
 .hero {
   color: #000000;
-  background-color: rgba(131, 179, 211, 0.2);
+  background-color: rgba(131, 179, 211, 0.5);
   background-image: url("../images/background/hero_banner_1200x485.jpg");
   background-size: cover;
   background-position: center center;
+}
+
+.hero__divider {
+  background: url("../images/index/divider.png") no-repeat bottom center;
+  text-align: center;
+}
+
+.hero__image {
+  margin: 51px 0 78px 0;
+
+}
+
+.intro {
+  text-align: center;
+  padding: 69px 0 90px 0;
+
 }
 
 .subscribe {
@@ -405,11 +490,6 @@ body {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.advantages__item:last-child, .advantages__item:first-child {
-  background-color: #82B3D3;
-  color: #fff;
-}
-
 .breadcrumbs__item:not(:last-child):after {
   content: '';
   background-image: url("../images/icons/icon_arrow.svg");
@@ -419,4 +499,103 @@ body {
   width: 8px;
   height: 11px;
   padding-bottom: 2px;
+}
+.advantages__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+}
+
+.advantages__item {
+  width: 33.333333%;
+}
+
+.advantages__item--large {
+  width: 100%;
+}
+
+.conditions__list {
+  display: flex;
+  margin: 0;
+}
+
+.conditions__item {
+  width: 33.333333%;
+}
+
+.search-hotels {
+  text-align: center;
+}
+
+.subscribe {
+  text-align: center;
+}
+
+.footer {
+  padding: 0 70px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__social-list {
+  margin: 0;
+}
+
+.catalog-filter {
+  display: flex;
+}
+
+.catalog-products {
+  padding: 0 70px;
+}
+
+.catalog-products__filter {
+  display: flex;
+  align-items: center;
+}
+
+.count-hotels {
+  margin-right: 200px;
+}
+
+.select-control {
+  margin-right: 90px;
+}
+
+.product-list {
+  display: flex;
+  margin: 0;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  width: 33.333333%;
+}
+
+.pagination {
+  display: flex;
+  margin: 0;
+}
+
+.pagination__item {
+  margin-right: 8px;
+}
+
+.inner-subscribe {
+  text-align: center;
+}
+
+.search-hotels__popup-form {
+  width: 717px;
+  margin: 0 auto;
+  text-align: left;
+  padding: 64px 70px;
+  position: relative;
+}
+
+.close-button {
+  position: absolute;
+  top: 64px;
+  right: 70px;
+  cursor: pointer;
 }
