--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -407,6 +407,7 @@ p {
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   display: inline-block;
+  text-transform: uppercase;
 }
 
 .subscribe__label {
