--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,8 +24,13 @@ body {
   line-height: 21px;
   color: #000;
   background-color: #F2F2F2;
-  margin: 0;
-  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  min-width: 375px;
+  max-width: 1200px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
@@ -46,15 +51,8 @@ p {
   margin: 0;
 }
 
-.wrapper {
-  margin: 0 auto;
-  min-width: 375px;
-  max-width: 1200px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+.main-index, .main-inner {
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
 }
 
 .main-container {
@@ -67,6 +65,7 @@ p {
 
 .page-header {
   padding: 0 70px;
+  background-color: #fff;
 }
 
 .navigation {
@@ -454,11 +453,16 @@ p {
 .intro {
   text-align: center;
   padding: 69px 0 90px 0;
+  background-color: #fff;
 
 }
 
+.advantages {
+  background-color: #fff;
+}
+
 .subscribe {
-  background-color: #E6F0F6;
+  background-color: rgba(131, 179, 211, 0.5);
   background-image: url("../images/background/subscribe_bg_1200x415.jpg");
   background-size: cover;
   background-position: center center;
@@ -469,7 +473,7 @@ p {
 
 .inner-header {
   color: #fff;
-  background-color: #E6F0F6;
+  background-color: rgba(131, 179, 211, 0.5);
   background-image: url("../images/background/catalog_banner_1200x412.jpg");
   background-size: cover;
   background-position: center center;
@@ -552,12 +556,14 @@ p {
 .search-hotels {
   text-align: center;
   padding: 96px 0;
+  background-color: #fff;
 }
 
 .footer {
   padding: 0 70px;
   display: flex;
   justify-content: space-between;
+  background-color: #fff;
 }
 
 .footer__social-list {
@@ -603,6 +609,7 @@ p {
 .inner-subscribe {
   text-align: center;
   padding: 96px 0 104px 0;
+  background-color: #fff;
 }
 
 .search-hotels__popup-form {
