--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ body {
   min-height: 100%;
   min-width: 375px;
   max-width: 1200px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
@@ -45,10 +45,12 @@ h2 {
 
 h3 {
   margin: 0;
+  margin-bottom: 16px;
 }
 
 p {
   margin: 0;
+  margin-bottom: 10px;
 }
 
 .main-index, .main-inner {
@@ -66,6 +68,7 @@ p {
 .page-header {
   padding: 0 70px;
   background-color: #fff;
+  margin-bottom: -10px;
 }
 
 .navigation {
@@ -79,16 +82,27 @@ p {
 
 .navigation__list {
   margin: 0;
-  margin-right: 285px;
+  margin-right: 281px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .navigation__list:last-child{
   margin-right: 0;
 }
 
+.navigation__user .navigation__link {
+  padding: 22px 12px;
+}
+
+.navigation__user .navigation__item:last-child {
+  margin-left: 20px;
+}
+
 .navigation__logo-link {
   width: 140px;
   margin-right: 28px;
+  z-index: 99999;
 }
 
 .navigation__link {
@@ -97,6 +111,8 @@ p {
   font-weight: 700;
   text-decoration: none;
   color: #000;
+  padding: 20px 16px;
+  display: block;
 }
 
 .navigation__button {
@@ -111,6 +127,12 @@ p {
   background-color: #756157;
   border-radius: 4px;
   display: inline-block;
+  margin-top: 14px;
+}
+
+.navigation__link--active-tab .navigation__label {
+  padding-bottom: 17px;
+  border-bottom: 2px solid #756157;
 }
 
 .search-hotels__button {
@@ -143,6 +165,10 @@ p {
   width: 100%;
 }
 
+.catalog-filter__button-container {
+  padding-top: 56px;
+}
+
 .catalog-filter__submit-button {
   font-size: 16px;
   line-height: 20px;
@@ -155,7 +181,9 @@ p {
   border: none;
   cursor: pointer;
   text-align: center;
-  display: inline-block;
+  display: block;
+  margin-bottom: 24px;
+  width: 191px;
 }
 
 .catalog-filter__reset-button {
@@ -170,7 +198,8 @@ p {
   border: none;
   cursor: pointer;
   text-align: center;
-  display: inline-block;
+  display: block;
+  width: 191px;
 }
 
 .intro_title, .search-hotels__title, .search-hotels__popup-title, .count-hotels {
@@ -184,6 +213,10 @@ p {
   font-size: 22px;
   line-height: 26px;
   color: #333;
+}
+
+.search-hotels__description, .subscribe__text {
+  margin-bottom: 54px;
 }
 
 .subscribe__title {
@@ -221,6 +254,29 @@ p {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
+}
+
+.conditions__title {
+  margin-bottom: 30px;
+}
+
+.advantages__title {
+  margin-bottom: 60px;
+  position: relative;
+}
+
+.advantages__title::after {
+  content: '';
+  width: 60px;
+  height: 2px;
+  background:  rgba(0, 0, 0, 0.3);
+  bottom: -30px;
+  left: 85px;
+  position: absolute;
+}
+
+.advantages__item--light .advantages__title::after {
+  background:  rgba(255, 255, 255, 0.3);
 }
 
 .advantages__text, .conditions__text {
@@ -284,7 +340,7 @@ p {
 
 .breadcrumbs {
   display: flex;
-  margin: 0;
+  margin: 0 0 40px 0;
 }
 
 .breadcrumbs__link {
@@ -298,6 +354,7 @@ p {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  margin-bottom: 32px;
 }
 
 .catalog-filter__item input {
@@ -313,11 +370,10 @@ p {
 }
 
 .catalog-filter__cost {
-  width: 17px;
-  height: 24px;
   color: #333;
   padding: 12px;
   background: #fff;
+  display: inline-block;
 }
 
 .select-control {
@@ -325,11 +381,16 @@ p {
   font-size: inherit;
   line-height: inherit;
   color: #333;
+  padding: 14px 20px;
+  border-radius: 4px;
+  background: #E6F0F6;
+  border: 2px solid #E5E5E5;
 }
 
 .product-card__link {
   text-decoration: none;
   color: inherit;
+  display: block;
 }
 
 .product-card__title {
@@ -353,9 +414,9 @@ p {
   border: none;
   text-decoration: none;
   color: #fff;
-  width: 140px;
   display: inline-block;
   text-transform: uppercase;
+  min-width: 124px;
 }
 
 .product-card__button--primary {
@@ -432,6 +493,10 @@ p {
   color: inherit;
 }
 
+.footer__button svg {
+  vertical-align: middle;
+}
+
 .hero {
   color: #000000;
   background-color: rgba(131, 179, 211, 0.5);
@@ -487,17 +552,18 @@ p {
   display: inline-block;
   width: 75px;
   height: 72px;
+  margin-bottom: 30px;
 }
 
-.conditions__item:nth-child(1):before {
+.conditions__item--house:before {
   background-image: url("../images/icons/icon_house.svg");
 }
 
-.conditions__item:nth-child(2):before {
+.conditions__item--food:before {
   background-image: url("../images/icons/icon_food.svg");
 }
 
-.conditions__item:nth-child(3):before {
+.conditions__item--souvenir:before {
   background-image: url("../images/icons/icon_souvenir.svg");
 }
 
@@ -518,6 +584,10 @@ p {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
+.breadcrumbs__item svg {
+ vertical-align: middle;
+}
+
 .breadcrumbs__item:not(:last-child):after {
   content: '';
   background-image: url("../images/icons/icon_arrow.svg");
@@ -526,7 +596,8 @@ p {
   background-size: contain;
   width: 8px;
   height: 11px;
-  padding-bottom: 2px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .advantages__list {
   display: flex;
@@ -541,6 +612,8 @@ p {
 
 .advantages__item--large {
   width: 100%;
+  display: flex;
+  max-height: 384px;
 }
 
 .conditions__list {
@@ -551,6 +624,7 @@ p {
 .conditions__item {
   width: 33.333333%;
   text-align: center;
+  padding: 80px 85px;
 }
 
 .search-hotels {
@@ -560,14 +634,27 @@ p {
 }
 
 .footer {
-  padding: 0 70px;
+  padding: 40px 70px 30px 70px;
   display: flex;
   justify-content: space-between;
   background-color: #fff;
+  align-items: center;
 }
 
 .footer__social-list {
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px 0;
+}
+
+.footer__production {
+  padding-top: 8px;
+}
+
+.footer__social-item {
+  width: 47px;
+  text-align: center;
 }
 
 .catalog-filter {
@@ -577,6 +664,7 @@ p {
 .catalog-products__filter {
   display: flex;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .count-hotels {
@@ -591,15 +679,38 @@ p {
   display: flex;
   margin: 0;
   flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 40px;
+  margin-bottom: 40px;
+  border-bottom: 1px solid #E6E6E6;
 }
 
 .product-card {
-  width: 33.333333%;
+  width: 300px;
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.product-card__image {
+  margin-bottom: 16px;
+}
+
+.product-card__description, .product-card__button-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.product-card__rating-container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .pagination {
   display: flex;
-  margin: 0;
+  margin: 0 0 10px 0;
 }
 
 .pagination__item {
@@ -625,4 +736,38 @@ p {
   top: 64px;
   right: 70px;
   cursor: pointer;
+}
+
+.advantages__content {
+  padding: 92px 85px;
+}
+
+.advantages__item--reverse {
+  flex-direction: row-reverse;
+}
+
+.catalog-filter__group {
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-right: 70px;
+}
+
+.catalog-products__button {
+  padding: 14px 17px;
+  border-radius: 4px;
+  margin-right: 8px;
+  border: 2px solid #E5E5E5;
+}
+
+.catalog-products__button:last-child {
+  margin-right: 0;
+}
+
+.catalog-products__button--active {
+  border: 2px solid #000000;
+}
+
+.catalog-filter__list {
+  margin: 0;
 }
