--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,13 +82,12 @@ p {
 
 .navigation__list {
   margin: 0;
-  margin-right: 281px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .navigation__list:last-child{
-  margin-right: 0;
+  margin-left: auto;
 }
 
 .navigation__user .navigation__link {
@@ -750,6 +749,14 @@ p {
   border: none;
   margin: 0;
   padding: 0;
+}
+
+.catalog-filter__group:nth-child(1) {
+  margin-right: 70px;
+}
+
+.catalog-filter__group:nth-child(3) {
+  margin-left: auto;
   margin-right: 70px;
 }
 
