--- a/styles/styles.css
+++ b/styles/styles.css
@@ -415,7 +415,8 @@ p {
   color: #fff;
   display: inline-block;
   text-transform: uppercase;
-  min-width: 124px;
+  width: 140px;
+  box-sizing: border-box;
 }
 
 .product-card__button--primary {
