--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,6 +92,8 @@ p {
 
 .navigation__user .navigation__link {
   padding: 22px 12px;
+  min-width: 20px;
+  min-height: 20px;
 }
 
 .navigation__user .navigation__item:last-child {
