:heavy_check_mark: Сборка #6

--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -82,17 +82,18 @@ p {
 
 .navigation__list {
   margin: 0;
-  margin-right: 281px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .navigation__list:last-child{
-  margin-right: 0;
+  margin-left: auto;
 }
 
 .navigation__user .navigation__link {
   padding: 22px 12px;
+  min-width: 20px;
+  min-height: 20px;
 }
 
 .navigation__user .navigation__item:last-child {
@@ -416,7 +417,8 @@ p {
   color: #fff;
   display: inline-block;
   text-transform: uppercase;
-  min-width: 124px;
+  width: 140px;
+  box-sizing: border-box;
 }
 
 .product-card__button--primary {
@@ -613,7 +615,6 @@ p {
 .advantages__item--large {
   width: 100%;
   display: flex;
-  max-height: 384px;
 }
 
 .conditions__list {
@@ -648,12 +649,9 @@ p {
   padding: 5px 0;
 }
 
-.footer__production {
-  padding-top: 8px;
-}
-
 .footer__social-item {
-  width: 47px;
+  min-width: 47px;
+  min-height: 20px;
   text-align: center;
 }
 
@@ -750,6 +748,14 @@ p {
   border: none;
   margin: 0;
   padding: 0;
+}
+
+.catalog-filter__group:nth-child(1) {
+  margin-right: 70px;
+}
+
+.catalog-filter__group:nth-child(3) {
+  margin-left: auto;
   margin-right: 70px;
 }
 
