--- a/styles/styles.css
+++ b/styles/styles.css
@@ -575,7 +575,7 @@ p {
 
 .catalog-products {
   background-color: #E6F0F6;
-  padding: 50px 70px;
+  padding: 50px 70px 60px 70px;
 }
 
 .advantages__item:nth-child(odd) {
@@ -669,26 +669,29 @@ p {
   margin-right: 200px;
 }
 
-.select-control {
-  margin-right: 90px;
+.catalog-products__button-container {
+  margin-left: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 8px;
 }
 
 .product-list {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
   margin: 0;
-  flex-wrap: wrap;
-  justify-content: space-between;
   padding-bottom: 40px;
   margin-bottom: 40px;
   border-bottom: 1px solid #E6E6E6;
 }
 
 .product-card {
-  width: 300px;
   border: 1px solid #E6E6E6;
   border-radius: 4px;
   padding: 20px;
-  margin-bottom: 20px;
+  box-sizing: border-box;
+  max-width: 340px;
 }
 
 .product-card__image {
@@ -708,7 +711,7 @@ p {
 
 .pagination {
   display: flex;
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 
 .pagination__item {
@@ -762,12 +765,9 @@ p {
 .catalog-products__button {
   padding: 14px 17px;
   border-radius: 4px;
-  margin-right: 8px;
   border: 2px solid #E5E5E5;
-}
-
-.catalog-products__button:last-child {
-  margin-right: 0;
+  text-decoration: none;
+  display: inline-block;
 }
 
 .catalog-products__button--active {
