--- a/styles/styles.css
+++ b/styles/styles.css
@@ -660,17 +660,14 @@ p {
 }
 
 .catalog-products__filter {
-  display: flex;
+  display: grid;
   align-items: center;
   margin-bottom: 40px;
-}
-
-.count-hotels {
-  margin-right: 200px;
+  grid-template-columns: 1fr 292px 160px;
+  column-gap: 70px;
 }
 
 .catalog-products__button-container {
-  margin-left: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 8px;
@@ -763,11 +760,15 @@ p {
 }
 
 .catalog-products__button {
-  padding: 14px 17px;
+  display: flex;
+  box-sizing: border-box;
+  width: 48px;
+  height: 48px;
+  justify-content: center;
+  align-items: center;
   border-radius: 4px;
   border: 2px solid #E5E5E5;
   text-decoration: none;
-  display: inline-block;
 }
 
 .catalog-products__button--active {
