--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,6 @@ h2 {
 
 h3 {
   margin: 0;
-  margin-bottom: 16px;
 }
 
 p {
@@ -91,7 +90,7 @@ p {
 }
 
 .navigation__user .navigation__link {
-  padding: 22px 12px;
+  padding: 22px 0;
   min-width: 20px;
   min-height: 20px;
 }
@@ -112,8 +111,21 @@ p {
   font-weight: 700;
   text-decoration: none;
   color: #000;
-  padding: 20px 16px;
+  padding: 20px 0 18px 0;
   display: block;
+  border-bottom: 2px solid #fff;
+}
+
+.navigation__link--active-tab {
+  border-bottom: 2px solid #756157;
+}
+
+.navigation__item {
+  padding: 0 16px;
+}
+
+.navigation__user .navigation__item {
+  padding: 0 12px;
 }
 
 .navigation__button {
@@ -129,11 +141,6 @@ p {
   border-radius: 4px;
   display: inline-block;
   margin-top: 14px;
-}
-
-.navigation__link--active-tab .navigation__label {
-  padding-bottom: 17px;
-  border-bottom: 2px solid #756157;
 }
 
 .search-hotels__button {
@@ -242,12 +249,8 @@ p {
   color: #333;
 }
 
-.inner-subscribe .subscribe__label {
+.inner-subscribe input {
   background-color: #F2F2F2;
-}
-
-.inner-subscribe .subscribe__label input {
-  background-color: inherit;
 }
 
 .advantages__title, .conditions__title {
@@ -392,6 +395,8 @@ p {
   text-decoration: none;
   color: inherit;
   display: block;
+  grid-column: 2/4;
+  grid-row: 1/1;
 }
 
 .product-card__title {
@@ -402,6 +407,44 @@ p {
 
 .product-card__type, .product-card__price, .product-card__rating {
   color: #333333;
+}
+
+.product-card__type {
+  grid-row: 2/2;
+  grid-column: 2/2;
+}
+
+.product-card__price {
+  grid-column: 3/3;
+  justify-self: end;
+  grid-row: 2/2;
+}
+
+.product-card__button--primary {
+  background-color: #756157;
+  grid-column: 2/2;
+  grid-row: 3/3;
+}
+
+.product-card__button--secondary {
+  background-color: #82B3D3;
+  grid-column: 3/3;
+  justify-self: end;
+  grid-row: 3/3;
+}
+
+.product-card__stars {
+  grid-column: 2/2;
+  grid-row: 4/4;
+}
+
+.product-card-button__rating {
+  color: #333;
+  background: #fff;
+  font-weight: 400;
+  grid-column: 3/3;
+  justify-self: end;
+  grid-row: 4/4;
 }
 
 .product-card__button {
@@ -473,22 +516,31 @@ p {
   text-transform: uppercase;
 }
 
-.subscribe__label {
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
-  display: inline-block;
-  padding: 12px 20px 10px 20px;
-  background: #fff;
+.subscribe__form {
+  display: flex;
+  justify-content: center;
 }
 
-.subscribe__label input {
+.subscribe__form input {
   font-size: 18px;
   line-height: 24px;
   color: #333;
   width: 452px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  display: inline-block;
+  padding: 12px 20px;
+  background: #fff;
+  border-color: #fff;
+  border-style: none;
 }
 
-.footer__hot-number a {
+.inner-subscribe input {
+  background: #F2F2F2;
+  border-color: #F2F2F2;
+}
+
+.footer__contacts a {
   font-size: 40px;
   line-height: 40px;
   text-decoration: none;
@@ -686,23 +738,17 @@ p {
 .product-card {
   border: 1px solid #E6E6E6;
   border-radius: 4px;
-  padding: 19px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 19px 150px 150px 19px;
+  grid-template-rows: 1fr 21px 36px 37px;
+  row-gap: 16px;
+  padding: 19px 0;
 }
 
 .product-card__image {
   margin-bottom: 16px;
-}
-
-.product-card__description, .product-card__button-container {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 16px;
-}
-
-.product-card__rating-container {
-  display: flex;
-  justify-content: space-between;
+  object-fit: cover;
 }
 
 .pagination {
