--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,9 +90,10 @@ p {
 }
 
 .navigation__user .navigation__link {
-  padding: 22px 0;
+  padding: 19px 0 18px 0;
   min-width: 20px;
   min-height: 20px;
+
 }
 
 .navigation__user .navigation__item:last-child {
@@ -114,6 +115,7 @@ p {
   padding: 20px 0 18px 0;
   display: block;
   border-bottom: 2px solid #fff;
+  transition: all .2s ease-in-out;
 }
 
 .navigation__link--active-tab {
@@ -128,84 +130,73 @@ p {
   padding: 0 12px;
 }
 
-.navigation__button {
+
+.button {
   font-size: 16px;
   line-height: 20px;
   font-weight: 700;
-  text-transform: uppercase;
-  text-align: center;
-  color: white;
-  text-decoration: none;
-  padding: 8px 34px;
-  background-color: #756157;
-  border-radius: 4px;
+  transition: all .2s ease-in-out;
   display: inline-block;
-  margin-top: 14px;
-}
-
-.search-hotels__button {
-  font-size: 20px;
-  line-height: 36px;;
-  font-weight: 700;
-  text-transform: uppercase;
+  cursor: pointer;
+  padding: 8px 8px;
   text-align: center;
-  color: white;
   text-decoration: none;
-  padding: 8px 50px;
-  background-color: #756157;
-  border-radius: 4px;
-  display: inline-block;
-}
-
-#popup-submit-button {
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 700;
   text-transform: uppercase;
-  text-align: center;
-  color: white;
-  padding: 18px 50px;
-  background-color: #83B3D3;
   border-radius: 4px;
   border: none;
-  cursor: pointer;
-  display: block;
+}
+
+.button--primary {
+  color: #fff;
+  background-color: #756157;
+}
+
+.button--secondary {
+  color: #fff;
+  background-color: #83B3D3;
+}
+
+.button--tertiary {
+  color: #fff;
+  background-color: transparent;
+  border: 3px solid transparent;
+  padding: 5px 5px;
+}
+
+
+.button--navigation {
+  margin-top: 14px;
+  width: 160px;
+
+}
+
+.button--search-hotels {
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  width: 376px;
+  }
+
+.button--popup-submit {
+  font-size: 20px;
+  line-height: 24px;
   width: 100%;
+  padding: 18px 18px;
 }
 
 .catalog-filter__button-container {
   padding-top: 56px;
 }
 
-.catalog-filter__submit-button {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: white;
-  padding: 8px 50px;
-  background-color: #83B3D3;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  text-align: center;
+.button--catalog-filter-submit {
   display: block;
   margin-bottom: 24px;
   width: 191px;
 }
 
-.catalog-filter__reset-button {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: white;
-  padding: 8px 50px;
-  background-color: transparent;
+.button--catalog-filter-reset {
   border-radius: 4px;
-  border: none;
-  cursor: pointer;
-  text-align: center;
   display: block;
   width: 191px;
 }
@@ -389,6 +380,7 @@ p {
   border-radius: 4px;
   background: #E6F0F6;
   border: 2px solid #E5E5E5;
+  cursor: pointer;
 }
 
 .product-card__link {
@@ -421,13 +413,12 @@ p {
 }
 
 .product-card__button--primary {
-  background-color: #756157;
   grid-column: 2/2;
   grid-row: 3/3;
+  box-sizing: border-box;
 }
 
 .product-card__button--secondary {
-  background-color: #82B3D3;
   grid-column: 3/3;
   justify-self: end;
   grid-row: 3/3;
@@ -445,23 +436,12 @@ p {
   grid-column: 3/3;
   justify-self: end;
   grid-row: 4/4;
+  cursor: auto;
 }
 
 .product-card__button {
-  padding: 8px 8px;
-  text-align: center;
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  cursor: pointer;
-  border: none;
-  text-decoration: none;
-  color: #fff;
-  display: inline-block;
-  text-transform: uppercase;
-  width: 140px;
   box-sizing: border-box;
+  width: 140px;
 }
 
 .product-card__button--primary {
@@ -501,20 +481,16 @@ p {
   background-color: #fff;
 }
 
-.subscribe__button {
+.button--subscribe {
   font-size: 20px;
   line-height: 36px;
-  font-weight: 700;
-  color: #fff;
-  padding:  8px 50px;
   background-color: #82B3D3;
-  border: none;
-  cursor: pointer;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
-  display: inline-block;
-  text-transform: uppercase;
-}
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  width: 232px;
+  }
 
 .subscribe__form {
   display: flex;
@@ -533,6 +509,8 @@ p {
   background: #fff;
   border-color: #fff;
   border-style: none;
+  outline-offset: 0;
+  outline: none;
 }
 
 .inner-subscribe input {
@@ -540,11 +518,12 @@ p {
   border-color: #F2F2F2;
 }
 
-.footer__contacts a {
+.footer__hotline {
   font-size: 40px;
   line-height: 40px;
   text-decoration: none;
   color: inherit;
+  transition: all .2s ease-in-out;
 }
 
 .footer__button svg {
@@ -723,6 +702,7 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 8px;
+
 }
 
 .product-list {
@@ -807,13 +787,13 @@ p {
 .catalog-products__button {
   display: flex;
   box-sizing: border-box;
-  width: 48px;
   height: 48px;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
   border: 2px solid #E5E5E5;
   text-decoration: none;
+  transition: all .2s ease-in-out;
 }
 
 .catalog-products__button--active {
@@ -822,4 +802,115 @@ p {
 
 .catalog-filter__list {
   margin: 0;
+}
+
+.navigation__link:hover {
+  border-bottom: 2px solid #756157
+}
+
+.button--primary:hover {
+  background-color: #615048;
+}
+
+.button--primary:focus-visible {
+  background-color: #615048;
+  outline-offset: 0;
+  outline: none;
+}
+
+.button--primary:active, .button--secondary:active, .button--tertiary:active, .pagination__link:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button--primary:disabled, .button--secondary:disabled {
+  background: #E5E5E5;
+}
+
+.button--secondary:hover, .pagination__link:hover {
+  background-color: #68A2CA;
+}
+
+.button--secondary:focus-visible, .pagination__link:focus-visible {
+  background-color: #68A2CA;
+  outline-offset: 0;
+  outline: none;
+}
+
+.button--tertiary:hover {
+  opacity: 0.6;
+}
+
+.button--tertiary:focus-visible {
+  border: 3px solid #68A2CA;
+  outline-offset: 0;
+  outline: none;
+}
+
+.button--tertiary:disabled {
+  opacity: 0.1;
+}
+
+.product-card__button--secondary-favorite:hover {
+  background-color: #6C9E42;
+}
+
+.product-card__button--secondary-favorite:focus-visible {
+  background-color: #68A2CA;
+  outline-offset: 0;
+  outline: none;
+}
+
+.pagination__link--current:hover, .pagination__link--current:active, .pagination__link--current:focus-visible {
+  color: #000;
+  background-color: #fff;
+}
+
+.footer__social-icon {
+  fill: #83B3D3;
+  transition: all .2s ease-in-out;
+}
+
+.footer__social-icon:hover {
+  fill: #68A2CA;
+}
+
+.footer__button:focus-visible {
+  outline-offset: 0;
+  outline: none;
+}
+
+.footer__button:focus-visible .footer__social-icon {
+  fill: #68A2CA;
+}
+
+.footer__hotline:hover, .footer__hotline:focus-visible {
+  color: #756157;
+  outline-offset: 0;
+  outline: none;
+}
+
+.footer__hotline:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.footer__logo {
+  fill: #000;
+  transition: all .2s ease-in-out;
+}
+
+.footer__logo:hover, .footer__logo:focus-visible {
+  fill: #756157;
+  outline-offset: 0;
+  outline: none;
+}
+
+.catalog-products__button:hover, .catalog-products__button:active {
+  border: 2px solid #000000;
+}
+
+.catalog-products__button:focus-visible {
+  outline-offset: 0;
+  outline: none;
+  border: 2px solid #82B3D3;
+
 }
