--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,7 @@ p {
   display: flex;
 }
 
-.navigation__list, .advantages__list, .conditions__list, .footer__social-list, .breadcrumbs, .catalog-filter__list, .product-list, .pagination {
+.navigation__list, .advantages__list, .footer__social-list, .breadcrumbs, .catalog-filter__list, .product-list, .pagination {
   list-style-type: none;
   padding-inline-start: 0;
 }
@@ -248,18 +248,11 @@ p {
   background-color: #F2F2F2;
 }
 
-.advantages__title, .conditions__title {
+.advantages__title {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
-}
-
-.conditions__title {
-  margin-bottom: 30px;
-}
-
-.advantages__title {
   margin-bottom: 60px;
   position: relative;
 }
@@ -274,11 +267,19 @@ p {
   position: absolute;
 }
 
+.advantages__list--conditions .advantages__title {
+  margin-bottom: 30px;
+}
+
+.advantages__list--conditions .advantages__title::after {
+  width: 0;
+}
+
 .advantages__item--light .advantages__title::after {
   background:  rgba(255, 255, 255, 0.3);
 }
 
-.advantages__text, .conditions__text {
+.advantages__text {
   color: #333;
 }
 
@@ -288,6 +289,10 @@ p {
 
 .advantages__item--light .advantages__title, .advantages__item--light .advantages__text {
   color: #fff;
+}
+
+.advantages__item--dark {
+  background-color: #fff!important;
 }
 
 .popup__input-number-container {
@@ -631,7 +636,7 @@ p {
   background-position: center center;
 }
 
-.conditions__item:before {
+.advantages__list--conditions .advantages__item:before {
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -642,19 +647,19 @@ p {
   margin-bottom: 30px;
 }
 
-.conditions__item--house:before {
+.advantages__item--house:before {
   background-image: url("../images/icons/icon_house.svg");
 }
 
-.conditions__item--food:before {
+.advantages__item--food:before {
   background-image: url("../images/icons/icon_food.svg");
 }
 
-.conditions__item--souvenir:before {
+.advantages__item--souvenir:before {
   background-image: url("../images/icons/icon_souvenir.svg");
 }
 
-.conditions__item:nth-child(odd){
+.advantages__item:nth-child(odd){
   background-color: rgba(131, 179, 211, 0.12);
 }
 
@@ -702,14 +707,8 @@ p {
   display: flex;
 }
 
-.conditions__list {
-  display: flex;
-  margin: 0;
-}
-
-.conditions__item {
-  width: 33.333333%;
-  text-align: center;
+.advantages__list--conditions .advantages__item {
+  box-sizing: border-box;
   padding: 80px 85px;
 }
 
