--- a/styles/styles.css
+++ b/styles/styles.css
@@ -585,6 +585,7 @@ a:focus-visible {
   background-color: #82B3D3;
   text-align: center;
   padding: 20px 0;
+  transition: all .2s ease-in-out;
 }
 
 .pagination__link--current {
