--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,9 +118,9 @@ a:focus-visible {
   font-weight: 700;
   text-decoration: none;
   color: #000;
-  padding: 20px 0 18px 0;
+  padding: 20px 0 19px 0;
   display: block;
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid transparent;
   transition: all .2s ease-in-out;
   position: relative;
 }
