--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,7 +97,7 @@ a:focus-visible {
 }
 
 .navigation__user .navigation__link {
-  padding: 19px 0 18px 0;
+  padding: 19px;
   min-width: 20px;
   min-height: 20px;
 }
