--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1154,16 +1154,16 @@ color: rgba(0, 0, 0, 0.6)
   cursor: default;
 }
 
-.button--secondary:hover, .pagination__link:hover:not(.pagination__link--nolink) {
+.button--secondary:hover, .pagination__link:hover:not(.pagination__link--nolink, .pagination__link--current) {
   background-color: #68A2CA;
 }
 
-.button--secondary:active, .pagination__link:active:not(.pagination__link--nolink) {
+.button--secondary:active, .pagination__link:active:not(.pagination__link--nolink, .pagination__link--current) {
   color: rgba(255, 255, 255, 0.3);
   background-color: #82B3D3;
 }
 
-.button--secondary:focus, .pagination__link:focus:not(.pagination__link--nolink) {
+.button--secondary:focus, .pagination__link:focus:not(.pagination__link--nolink, .pagination__link--current) {
   background-color: #68A2CA;
   outline: none;
 }
@@ -1201,11 +1201,6 @@ color: rgba(0, 0, 0, 0.6)
 
 .product-card__button--secondary-favorite:focus {
   background-color: #6C9E42;
-}
-
-.pagination__link--current:hover, .pagination__link--current:active, .pagination__link--current:focus {
-  color: #000;
-  background-color: #fff;
 }
 
 .footer__social-icon {
