--- a/styles/styles.css
+++ b/styles/styles.css
@@ -324,8 +324,7 @@ a:focus-visible {
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
-  margin-bottom: 60px;
-  position: relative;
+  margin-bottom: 30px;
 }
 
 .advantages__title::after {
@@ -333,17 +332,13 @@ a:focus-visible {
   width: 60px;
   height: 2px;
   background:  rgba(0, 0, 0, 0.3);
-  bottom: -30px;
-  left: 85px;
-  position: absolute;
-}
-
-.advantages__list--conditions .advantages__title {
-  margin-bottom: 30px;
+  display: block;
+  margin: 30px auto 0;
 }
 
 .advantages__list--conditions .advantages__title::after {
   width: 0;
+  margin: 0;
 }
 
 .advantages__item--dark .advantages__title::after {
