--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,14 @@ a:focus-visible {
 }
 
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .page-header {
@@ -106,6 +113,10 @@ a:focus-visible {
 
 .navigation__list:last-child{
   margin-left: auto;
+}
+
+.navigation__user {
+  flex-wrap: nowrap;
 }
 
 .navigation__user .navigation__link {
@@ -624,11 +635,6 @@ a:focus-visible {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
-.control:focus .control__mark {
-  outline: 3px solid #83B3D3;
-  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-}
 
 .control:active .control__mark {
   outline: 2px solid #83B3D3;
@@ -638,6 +644,12 @@ a:focus-visible {
 
 .control:active {
   opacity: 0.3;
+}
+
+.control__input:focus + .control__mark {
+  outline: 3px solid #83B3D3;
+  -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
 .control__input:disabled + .control__mark, .control__input:disabled + .control__mark + .control__label {
